2010-01-21  Stas Boukarev  <stassats@gmail.com>

	* swank-ccl.lisp (with-frame): Put this macro before it's used.

2010-01-20  Terje Norderhaug <terje@in-progress.com>

	* swank.lisp (with-swank-protocol-error-handler): Refactor using safe-backtrace.
	* swank-rpc.lisp (make-swank-protocol-error): Delete call to swank:safe-backtrace
	to eliminate dependency on swank.lisp module.
	* swank-rpc.lisp (swank-protocol-error): Remove swank-protocol-error.backtrace
	as the capture of a safe-backtrace is covered by with-swank-protocol-error-handler.
	
2010-01-20  Stas Boukarev  <stassats@gmail.com>

	* slime.el (slime-thread-kill): If the region is active, then
	kill all threads in the region.

2010-01-19  Stas Boukarev  <stassats@gmail.com>

	* swank-rpc.lisp (:swank-rpc): (:use :cl), SBCL
	doesn't use it by default.

2010-01-19  Terje Norderhaug  <terje@in-progress.com>

	* Refactorized parts of swank.lisp into a new swank-rpc module.

2010-01-14  Stas Boukarev  <stassats@gmail.com>

	* doc/slime.texi (Setting up the lisp image):
	(swank-loader:init) is also needed for loading swank.
	Reported by Evgeny Bahvalov.

2010-01-13  Tobias C. Rittweiler <tcr@freebits.de>

	* swank.lisp (*swank-state-stack*): Delete. Not needed anymore.
	(defslimefun state-stack): Delete.
	(decode-message): Adapted.
	(debug-in-emacs): Adapted.

2010-01-11  Mark Evenson  <evenson@dada.local>

	* swank-abcl.lisp (emacs-inspect): Implementation for Java
	objects.

	Fix compiler warning about *ABCL-SIGNALED-CONDITIONS*.

2010-01-06  Tobias C. Rittweiler <tcr@freebits.de>

	* swank-backend (declaration-arglist): Normalize declaration
	specifiers to contain `variables' rather than `vars'.

2010-01-05  Tobias C. Rittweiler <tcr@freebits.de>

	* swank-sbcl.lisp (compiler-note-location): Add missing return-from.

2010-01-05  Tobias C. Rittweiler <tcr@freebits.de>

	* slime.el (compile-defun [test]): Add two cases.

2010-01-05  Cecil Westerhof  <Cecil@decebal.nl>
